--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
-    "formik": "^2.2.9",
+    "formik": "^2.4.0",
+    "framer-motion": "^10.12.16",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "tailwindcss": "^3.3.2"
