--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-pin-input": "^1.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "yup": "^1.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
