--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.5.1",
     "react-pin-input": "^1.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
