--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "formik": "^2.4.0",
     "framer-motion": "^10.12.16",
     "postcss": "^8.4.23",
@@ -21,6 +22,7 @@
     "react-pin-input": "^1.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.2",
     "yup": "^1.2.0",
     "zustand": "^4.3.8"
